--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Nauka geografii w efektywny sposób jakim są quizy. Sprawdź swoją wiedzę geograficzną!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script src="https://kit.fontawesome.com/3791a5ccb0.js" crossorigin="anonymous"></script>
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>GEO</title>
+    <title>Geolearn - ucz się geografii</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
